--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -78,6 +78,10 @@
           data-url="{{ product.url }}"
           class="product__info-container{% if section.settings.enable_sticky_info %} product__column-sticky{% endif %}"
         >
+          {% if product.metafields.custom.productBadge %}
+            <p>Color: {{ product.metafields.custom.productBadge }}</p>
+          {% endif %}
+
           {%- assign product_form_id = 'product-form-' | append: section.id -%}
 
           {%- for block in section.blocks -%}
