--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -204,7 +204,7 @@
                       id="Subscribe"
                       aria-label="{{ 'newsletter.button_label' | t }}"
                     >
-                      {% render 'icon-arrow' %}
+                      {% render 'icon-arrow-green' %}
                     </button>
                   </div>
                   {%- if form.errors -%}
